--- a/group_vars/common.yml
+++ b/group_vars/common.yml
@@ -1,5 +1,5 @@
 ---
-bucket_name: "kanclerj"
-queue_name: "kanclerj"
+bucket_name: "175096"
+queue_name: "175096"
 queue_region: "eu-west-1"
 mandrill_api_key: "4OBwBXURpKwI5QLQv8LQ1g"
